--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
   "homepage": "https://github.com/ishaan-pare/Annpatra_server#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.36.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^9.0.0"
   }
 }
